# sample-fem

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  ctest_run.bat  misc_run_test.bat  run-test-1.bat  run_test.bat
core/: CMakeLists.txt
core/include/: beam.h  beamdistload.h  coords.h  dof.h  model.h  node.h  nodeforce.h  nodefreedom.h
core/src/: beam.cpp  beamdistload.cpp  dof.cpp  model.cpp  node.cpp  nodeforce.cpp  nodefreedom.cpp
core/test/: misc-tests.cpp  model-use.cpp  other-tests.cpp  test-log.cpp  test-main.cpp  test-simple.cpp  test-solve.cpp  test.cpp
test1/: CMakeLists.txt
test1/src/: test-solve.cpp  test.cpp
